kubernetes/kubernetes-dashboard-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websec
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsenc
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/services.kubernetes-dashboard.loadbalancer.server.scheme: https

spec:
  rules:
  - host: dashboard.k9s.ohrenpirat.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
